@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-10-04: Fixed bug where @skpoint would set base level to 1001 if the value
+	    entered would raise skill points to above 1001. [Trihan]
+- 07-10-04: Added @stpoint to ALBGM. [Trihan]
 - 07-10-04: Added @h to ALBGM. [Trihan]
 - 07-10-04: Fixed the critical display for Assassins when a katar is equipped. [Trihan]
 - 07-09-04: Fixed @help command. [Trihan]
